# ghostbit

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  api.py  config.py  detect.py  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml  webhook.py
.github/workflows/: docker.yml  docs.yml  release.yml  test.yml
adr/0001-zero-knowledge-crypto/: index.html
adr/0002-argon2id-kdf/: index.html
api/: index.html
app/: __init__.py  admin.py  api.py  config.py  detect.py  languages.json  languages.py  main.py  metrics.py  rate_limit.py  webhook.py
app/storage/: __init__.py  base.py  redis_backend.py  sqlite.py
assets/stylesheets/: theme.css
cli/: README.md  __init__.py  _api.py  _completion.py  _config.py  _crypto.py  _history.py  cli.py  index.html  pyproject.toml
cli-powershell/: index.html
cli/powershell/: Ghostbit.psd1  Ghostbit.psm1
configuration/: index.html
docs/: api.md  cli-powershell.md  cli.md  configuration.md  encryption.md  getting-started.md  index.md  self-hosting.md
docs/adr/: 0001-zero-knowledge-crypto.md  0002-argon2id-kdf.md
docs/assets/stylesheets/: theme.css
encryption/: index.html
getting-started/: index.html
scripts/: backup.sh  ghostbit-backup.service  ghostbit-backup.timer
search/: search_index.json
self-hosting/: index.html
static/: e2e.js  footer.js  index.js  paste.js  qrcode.min.js  raw.js  style.css  theme.js
static/cm/: codemirror-core.min.js  codemirror-modes.min.js  codemirror.min.css
storage/: __init__.py  base.py  redis_backend.py  sqlite.py
templates/: api_docs.html  base.html  error.html  index.html  password.html  paste.html  raw.html
tests/: test_admin.py  test_api.py  test_cli_crypto.py  test_detect.py  test_languages.py  test_metrics.py  test_rate_limit.py  test_redis_storage.py  test_sqlite_pool.py  test_webhook.py
