[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostbit-cli"
version = "1.3.0"
description = "Ghostbit CLI — create end-to-end encrypted pastes from the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["paste", "cli", "encryption", "privacy", "ghostbit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
]
dependencies = [
    "cryptography>=42.0.0",
    "certifi",
]

[project.optional-dependencies]
color = ["pygments>=2.17.0"]
markdown = ["rich>=13.0.0"]
all = ["pygments>=2.17.0", "rich>=13.0.0"]

[project.urls]
Homepage = "https://github.com/stackopshq/ghostbit"
Repository = "https://github.com/stackopshq/ghostbit"
"Bug Tracker" = "https://github.com/stackopshq/ghostbit/issues"

[project.scripts]
gbit = "cli:main"
ghostbit = "cli:main"

# Flat layout: pyproject.toml lives next to __init__.py, so the project
# root _is_ the `cli` package. Explicit packages list + package-dir mapping
# — setuptools' auto-discovery can't figure this out on its own because
# there's no `cli/cli/` subdirectory to walk into.
[tool.setuptools]
packages = ["cli"]
package-dir = {"cli" = "."}
